add new lines in hh.html

--- a/HTML&PHP/hh.html
+++ b/HTML&PHP/hh.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <h1>hh</h1>
-    dazdijazdfiuhazio
-    doazfoieazkf
-    daezjfocfeazfceazfezf
+    mouad 
+    ziko
 </body>
 </html>
