--- a/titanic/php/index.html
+++ b/titanic/php/index.html
@@ -22,8 +22,8 @@
             <li><a href="#">Products</a></li>
         </ul>
         <div class="btn p-2">
-            <button class="bg-slate-800 text-white rounded-3xl p-2 w-20 m-2 hover:bg-green-500"><a href="Titanic/titanic/php/sign-up.php">Sign up</a></button>
-            <button class="bg-slate-800 text-white rounded-3xl p-2 w-20 hover:bg-green-500"><a href="Titanic/titanic/php/login.php">Log in</a></button>
+            <button class="bg-slate-800 text-white rounded-3xl p-2 w-20 m-2 hover:bg-green-500"><a href="sign-up.php">Sign up</a></button>
+            <button class="bg-slate-800 text-white rounded-3xl p-2 w-20 hover:bg-green-500"><a href="login.php">Log in</a></button>
         </div>
     </div>
 
